# litter-assessment

./: Dockerfile  JenkinsConstants.groovy  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
.sqa/: config.yml
litter_assessment_service/: api.py  config.py  dataframe.py  face_detection.py  fields.py  imageslicer.py  misc.py  plotting.py  preprocessing.py
tests/: test_api.py
training/: training.ipynb
training_litter_detection/: training_detection.ipynb
training_litter_detection/configs/: labels.yaml
training_litter_quantification/: training_quantification.ipynb
training_litter_quantification/configs/: labels.yaml
