[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "litter_assessment_service"
authors = [{ name = "Carolin Leluschko", email = "carolin.leluschko@dfki.de" }]
description = "Integration of DEEPaaS API and litter assessment software"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/litter-assessment"
"Bug Tracker" = "https://github.com/ai4os-hub/litter-assessment/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "LITTER_ASSESSMENT_SERVICE_DATA_PATH=tests/data",
    "LITTER_ASSESSMENT_SERVICE_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["litter_assessment_service"]

[tool.setuptools.package-dir]
"litter_assessment_service" = "litter_assessment_service"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
litter_assessment_service = "litter_assessment_service.api"
